<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/ContactApp.Menu">

    <item android:id="@+id/favourites"
        android:title="@string/favourites"
        android:icon="@drawable/unfilled_star"
        android:iconTint="@color/icon_gray"
        />
    <item android:id="@id/edit"
        android:title="@string/edit"
        android:icon="@drawable/edit_icon"
        android:iconTint="@color/icon_gray"
        />
    <item android:id="@+id/share"
        android:title="@string/share"
        android:icon="@drawable/share_icon"
        android:iconTint="@color/icon_gray"
        />
    <item android:id="@+id/delete"
        android:title="@string/delete"
        android:icon="@drawable/delete_white"
        android:iconTint="@color/icon_gray"
        />
<!--    TODO: can you make the navigation bar texts to appear-->
</menu>