<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/gray_background"
    tools:context=".PhoneActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="Phone"
            android:fontFamily="@font/poppins"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            />

        <LinearLayout
            android:layout_marginTop="100dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10sp"
                android:layout_marginTop="2dp"
                android:hint="@string/name"
                android:padding="10sp"
                android:textColorHint="@color/icon_gray"
                app:boxBackgroundMode="none"
                app:startIconDrawable="@drawable/baseline_person_24"
                app:endIconDrawable="@drawable/downward_arrow_icon"
                app:endIconMode="custom"
                >

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:fontFamily="@font/poppins"
                    android:textSize="15sp"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>
          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              style="@style/edit_text2"
              android:layout_marginHorizontal="20dp"
              android:paddingHorizontal="30dp"
              android:paddingTop="30dp"
              >
              <LinearLayout
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">
                  <ImageView
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginRight="20dp"
                      android:src="@drawable/phone_icon"/>
                  <TextView
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginRight="10dp"
                      android:text="@string/mobile"/>
                  <ImageView
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginRight="170dp"
                      android:src="@drawable/orange_arrow_right_icon"/>
                  <ImageButton
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:backgroundTint="@null"
                      android:padding="5dp"
                      android:src="@drawable/baseline_minimize_24"/>
              </LinearLayout>
              <EditText
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/_251913131313"
                  android:inputType="numberDecimal"
                  />
              <com.google.android.material.textfield.TextInputLayout
                  android:id="@+id/email1_input_layout"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginHorizontal="10sp"
                  android:layout_marginTop="2dp"
                  android:hint="@string/add_phone_number"
                  android:padding="10sp"
                  android:textColorHint="@color/icon_gray"
                  app:boxBackgroundMode="none"
                  app:startIconDrawable="@drawable/white_add_icon"
                  >
                  <com.google.android.material.textfield.TextInputEditText
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:padding="15dp"
                      android:fontFamily="@font/poppins"
                      android:textSize="15sp"
                      android:inputType="textEmailAddress" />
              </com.google.android.material.textfield.TextInputLayout>

          </LinearLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10sp"
                android:layout_marginTop="2dp"
                android:hint="@string/email"
                android:padding="10sp"
                android:textColorHint="@color/icon_gray"
                app:boxBackgroundMode="none"
                app:startIconDrawable="@drawable/mail_icon"
                >

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:fontFamily="@font/poppins"
                    android:textSize="15sp"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/address_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10sp"
                android:layout_marginTop="2dp"
                android:hint="@string/address"
                android:padding="10sp"
                android:textColorHint="@color/icon_gray"
                app:boxBackgroundMode="none"
                app:startIconDrawable="@drawable/location"
                >

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:fontFamily="@font/poppins"
                    android:textSize="15sp"
                    android:inputType="textPostalAddress" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>



    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="100dp"
        >

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            style="@style/black_btn"
            android:layout_marginHorizontal="10dp"
            android:paddingVertical="30dp"
            android:textColor="@color/hints" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            android:textColor="@color/hints"
            style="@style/black_btn"
            android:layout_marginHorizontal="10dp"
            android:paddingVertical="30dp"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>