<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/gray_background"
    tools:context=".AddContactActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="Phone"
            android:fontFamily="@font/poppins"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            />

        <LinearLayout
            android:layout_marginTop="100dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10sp"
                android:layout_marginTop="2dp"
                android:hint="@string/name"
                android:padding="10sp"
                android:textColorHint="@color/icon_gray"
                app:boxBackgroundMode="none"
                app:startIconDrawable="@drawable/baseline_person_24"
                app:endIconDrawable="@drawable/downward_arrow_icon"
                app:endIconMode="custom"
                >

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/edit_text"
                    android:id="@+id/name_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:fontFamily="@font/poppins"
                    android:textSize="15sp"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10sp"
                android:layout_marginTop="2dp"
                android:hint="@string/phone"
                android:padding="10sp"
                android:textColorHint="@color/icon_gray"
                app:boxBackgroundMode="none"
                app:startIconDrawable="@drawable/phone_icon"
                >

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/edit_text"
                    android:id="@+id/phone_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:fontFamily="@font/poppins"
                    android:textSize="15sp"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10sp"
                android:layout_marginTop="2dp"
                android:hint="@string/email"
                android:padding="10sp"
                android:textColorHint="@color/icon_gray"
                app:boxBackgroundMode="none"
                app:startIconDrawable="@drawable/mail_icon"
                >

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/edit_text"
                    android:id="@+id/email_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:fontFamily="@font/poppins"
                    android:textSize="15sp"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/address_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10sp"
                android:layout_marginTop="2dp"
                android:hint="@string/address"
                android:padding="10sp"
                android:textColorHint="@color/icon_gray"
                app:boxBackgroundMode="none"
                app:startIconDrawable="@drawable/location"
                >

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/edit_text"
                    android:id="@+id/address_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:fontFamily="@font/poppins"
                    android:textSize="15sp"
                    android:inputType="textPostalAddress" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>



    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="100dp"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            style="@style/black_btn"
            android:layout_marginHorizontal="10dp"
            android:paddingVertical="30dp"
            android:textColor="@color/hints" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            android:textColor="@color/hints"
            style="@style/black_btn"
            android:layout_marginHorizontal="10dp"
            android:paddingVertical="30dp"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>