<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent" android:layout_height="match_parent" android:backgroundTint="@color/background" tools:context=".MainActivity">
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/container"
            android:layout_above="@id/bottom_navigation">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginVertical="50dp"
                android:paddingTop="140dp"
                android:paddingBottom="10dp"
                android:background="@drawable/border_radius">
                <TextView
                    android:id="@+id/contact_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_name"
                    android:fontFamily="@font/poppins_medium"
                    android:textSize="20sp"
                    android:textColor="@color/white"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mobile"
                        android:fontFamily="@font/poppins"/>
                    <TextView
                        android:id="@+id/phone_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phone_number"
                        android:layout_marginLeft="10dp"
                        android:fontFamily="@font/poppins_medium"
                        android:textSize="16sp"
                        android:textColor="@color/white"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Email"
                        android:fontFamily="@font/poppins"/>
                    <TextView
                        android:id="@+id/email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="email@gmail.com"
                        android:layout_marginLeft="10dp"
                        android:fontFamily="@font/poppins_medium"
                        android:textSize="16sp"
                        android:textColor="@color/white"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Address"
                        android:fontFamily="@font/poppins"/>
                    <TextView
                        android:id="@+id/address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Nifas silk"
                        android:layout_marginLeft="10dp"
                        android:fontFamily="@font/poppins_medium"
                        android:textSize="16sp"
                        android:textColor="@color/white"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="140dp"
                    android:layout_height="60dp"
                    android:orientation="horizontal"
                    android:layout_marginHorizontal="50dp"
                    android:layout_marginVertical="20dp">
                    <Button
                        android:id="@+id/call_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/green_btn"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:paddingTop="10dp"
                        android:layout_marginHorizontal="10dp"
                        android:drawableTop="@drawable/phone_icon"/>
                    <Button
                        android:id="@+id/message_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/blue_btn"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_marginHorizontal="10dp"
                        android:paddingTop="10dp"
                        android:drawableTop="@drawable/message_icon"/>
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bottom_navigation"
            android:layout_alignParentBottom="true"
            app:menu="@menu/bottom_nav_bar"
            android:paddingVertical="10dp"/>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>